--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "description": "DataLayer push with `.xlsx` made easy",
   "homepage": "https://github.com/epicagency/snitchy-loader",
-  "main": "src/loader.js",
+  "main": "dist/loader.js",
   "scripts": {
+    "clean": "rimraf dist",
+    "build": "webpack --progress --profile",
     "lint": "eslint src/** || exit 0",
     "test": "npm run lint && jest --coverage || exit 0",
     "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
-    "prepare": "npm run test"
+    "prepare": "npm-run-all clean test build"
   },
   "repository": {
     "type": "git",
@@ -44,7 +46,10 @@
     "babel-jest": "^23.4.2",
     "coveralls": "^3.0.2",
     "jest": "^23.5.0",
-    "webpack": "^4.16.5"
+    "npm-run-all": "^4.1.3",
+    "rimraf": "^2.6.2",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "xlsx": "^0.13.3"
