--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "DataLayer push with `.xlsx` made easy",
   "homepage": "https://github.com/epicagency/snitchy-loader",
-  "main": "dist/loader.js",
+  "main": "lib/loader.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "webpack --progress --profile",
+    "build": "babel src --out-dir lib",
     "lint": "eslint src/** || exit 0",
     "test": "npm run lint && jest --coverage || exit 0",
     "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
@@ -40,6 +40,7 @@
   },
   "license": "SEE LICENSE IN UNLICENSE",
   "devDependencies": {
+    "@babel/cli": "^7.0.0-rc.1",
     "@babel/core": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
     "babel-core": "^7.0.0-bridge.0",
@@ -48,8 +49,7 @@
     "jest": "^23.5.0",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^4.16.5"
   },
   "dependencies": {
     "xlsx": "^0.13.3"
